--- a/src/EPAM.CoreWorkshop.ReportHelper/EPAM.CoreWorkshop.ReportHelper.csproj
+++ b/src/EPAM.CoreWorkshop.ReportHelper/EPAM.CoreWorkshop.ReportHelper.csproj
@@ -1,7 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.1;netstandard2.0;netcoreapp1.1</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageId>EPAM.ReportHelper</PackageId>
+    <Version>1.0.0.2</Version>
+    <Description>Simple NuGet package for .Net Core workshop</Description>
+    <Title>Report helper</Title>
+    <Authors>EPAM Systems</Authors>
+    <Company>EPAM Systems</Company>
   </PropertyGroup>
 
 </Project>
